--- a/scss/helpers/_variables.scss
+++ b/scss/helpers/_variables.scss
@@ -1,12 +1,12 @@
 // Variables
 
 // Colors
-$main-color:		#FFF;
-$sec-color: 		#000;
+$main-color:		#FFF; // white
+$sec-color: 		#6d6e70; // gray
 
 // Margin
-$padding: 			15px;
-$margin: 			15px;
+$padding: 			10px;
+$margin: 			10px;
 
 // Typography
-$main-font: 		'Abel', sans-serif;
+$main-font: 		'Quicksand', sans-serif;
