--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -1,3 +1,3 @@
 // Typography used in this project
 
-@import url('https://fonts.googleapis.com/css?family=Abel');
+@import url('https://fonts.googleapis.com/css?family=Quicksand');
