--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -1,1 +1,18 @@
 //  Buttons
+
+.social{
+	margin-bottom:			$margin;
+	a{
+		width: 				25px;
+		height: 			25px;
+		display: 			inline-block;
+		background-size:	100% auto;
+		text-indent: 		999999px;
+	}
+	a.facebook{
+		background:			url(images/icon-facebook.png);
+	}
+	a.instagram{
+		background:			url(images/icon-instagram.png);
+	}
+}
