--- a/scss/layout/_nav.scss
+++ b/scss/layout/_nav.scss
@@ -1,1 +1,14 @@
 // Nav
+
+#main-nav{
+	float:						left;
+	> a{
+		background: 			url(images/icon-menu.png);
+		background-size: 		100% auto;
+		width: 					35px; // 72px;
+		height: 				28px; // 59px;
+		display: 				inline-block;
+		text-indent: 			-99999px;
+		margin-top: 			20px;
+	}
+}
