--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,8 +1,12 @@
 // Header
 #main-header{
 	background: 		$main-color;
-	background:			rgba(255,255,255, 0.5);
+	background:			rgba(255,255,255, 0.8);
 	padding:			5px 0;
+	padding-bottom:		15px;
+	position:			fixed;
+	z-index:			91;
+	width:				100%;
 	.main-width{
 		text-align:		center;
 		overflow: 		hidden;
