--- a/style.css
+++ b/style.css
@@ -310,6 +310,25 @@ a {
     text-indent: -99999px;
     margin-top: 20px; }
 
+.main-menu {
+  background: #6d6e70;
+  position: fixed;
+  left: 0;
+  height: 100%;
+  margin-top: 100.5px;
+  z-index: 91;
+  width: 280px;
+  margin-left: -300px;
+  padding: 10px; }
+  .main-menu .btn-close {
+    float: right; }
+  .main-menu .menu ul li a {
+    color: #FFF;
+    text-transform: uppercase;
+    font-size: 16px; }
+    .main-menu .menu ul li a:hover {
+      color: #FFF; }
+
 .social {
   margin-bottom: 10px; }
   .social a {
@@ -322,6 +341,28 @@ a {
     background: url(images/icon-facebook.png); }
   .social a.instagram {
     background: url(images/icon-instagram.png); }
+
+.btn-scroll {
+  color: #FFF;
+  text-transform: uppercase;
+  background: url(images/icon-scroll.png) no-repeat;
+  background-position: 50% 30px;
+  display: inline-block;
+  height: 70px; }
+  .btn-scroll:hover {
+    color: #FFF; }
+
+.btn-close {
+  color: #FFF;
+  text-transform: uppercase;
+  background: url(images/icon-close.png) no-repeat;
+  background-position: 100% 50%;
+  background-size: 26% auto;
+  display: inline-block;
+  line-height: 30px;
+  padding-right: 30px; }
+  .btn-close:hover {
+    color: #FFF; }
 
 #wowslider-container3 .ws_bullets {
   left: 10% !important;
@@ -338,5 +379,21 @@ a {
     border-radius: 3px !important; }
     #wowslider-container3 .ws_bullets a.ws_selbull {
       background: #FFF !important; }
+
+.main-slider {
+  position: relative; }
+  .main-slider h2 {
+    position: absolute;
+    color: #FFF;
+    font-size: 34px;
+    left: 18%;
+    top: 135px;
+    text-transform: uppercase;
+    z-index: 90; }
+  .main-slider .btn-scroll {
+    position: absolute;
+    bottom: 50px;
+    left: 50%;
+    z-index: 90; }
 
 /*# sourceMappingURL=style.css.map */
