--- a/scss/layout/_nav.scss
+++ b/scss/layout/_nav.scss
@@ -1,14 +1,43 @@
 // Nav
 
 #main-nav{
-	float:						left;
+	float:									left;
 	> a{
-		background: 			url(images/icon-menu.png);
-		background-size: 		100% auto;
-		width: 					35px; // 72px;
-		height: 				28px; // 59px;
-		display: 				inline-block;
-		text-indent: 			-99999px;
-		margin-top: 			20px;
+		background: 						url(images/icon-menu.png);
+		background-size: 					100% auto;
+		width: 								35px; // 72px;
+		height: 							28px; // 59px;
+		display: 							inline-block;
+		text-indent: 						-99999px;
+		margin-top: 						20px;
+	}
+}
+
+.main-menu{
+	background:								$sec-color;
+	position:								fixed;
+	left:									0;
+	height:									100%;
+	margin-top:								100.5px;
+	z-index:								91;
+	width:									280px;
+	margin-left:							-300px;
+	padding:								$padding;
+	.btn-close{
+		float: 								right;
+	}
+	.menu{
+		ul{
+			li{
+				a{
+					color:					$main-color;
+					text-transform: 		uppercase;
+					font-size:				16px;
+					&:hover{
+						color:				$main-color;
+					}
+				}
+			}
+		}
 	}
 }
