--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -5,16 +5,65 @@
 	h2{
 		position:			absolute;
 		color:				$main-color;
-		font-size: 			34px;
-		left: 				18%;
+		font-size: 			40px;
+		left: 				12%;
 		top:				135px;
 		text-transform:		uppercase;
 		z-index: 			90;
+		font-weight: 		normal;
 	}
 	.btn-scroll{
 		position:			absolute;
-		bottom: 			50px;
+		bottom: 			30px;
 		left: 				50%;
 		z-index: 			90;
+	}
+}
+
+.home-products{
+	position:				relative;
+	min-height:				500px;
+	overflow:				hidden;
+	background:				#1d1812;
+	h2{
+		font-size: 						34px;
+		text-transform: 				uppercase;
+		color:							$main-color;
+		position:						absolute;
+		left:							12%;
+		top: 							60px;
+		z-index: 						1;
+		font-weight: 					normal;
+	}
+	.product{
+		width: 							33.33%;
+		float: 							left;
+		position:						relative;
+		overflow: 						hidden;
+		img{
+			width: 						100%;
+			-webkit-transition: 		all 1s ease;
+			transition: 				all 1s ease;
+			margin-bottom: 				0;
+		}
+		h3{
+			position:					absolute;
+			z-index: 					1;
+			top: 						125px;
+			left:						15%;
+			font-size: 					24px;
+			color:						$main-color;
+			text-transform: 			uppercase;
+			font-weight: 				normal;
+		}
+		&.tapiceria{
+			h3{
+				left: 					36%;
+			}
+		}
+	}
+	.product:hover img{
+		-webkit-transform: 				scale(1.1);
+		transform: 						scale(1.1);
 	}
 }
