--- a/scss/main.scss
+++ b/scss/main.scss
@@ -19,6 +19,7 @@
 // Components
 @import 'components/buttons';
 @import 'components/slider';
+@import 'components/dividers';
 
 // Pages
 @import 'pages/home';
