Making some adjustments

--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -17,7 +17,7 @@
 			margin-bottom: $margin;
 		}
 		a{
-			background: url(images/logo-soffah.png);
+			background: url(images/logo-soffah.png) no-repeat;
 			background-size: 100% auto;
 			width: 130px; // 205px
 			height: 54px; //85
