--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -113,4 +113,7 @@
 		border:							0 !important;
 		@include						border-radius(5px);
 	}
+	.fm-form .wdform-label-section{
+		display:						none;
+	}
 }
