--- a/style.css
+++ b/style.css
@@ -499,12 +499,14 @@ a {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  padding: 60px 0; }
+  padding: 60px 0;
+  overflow: hidden; }
   .subcategory h2 {
     font-size: 34px;
     text-transform: uppercase;
     color: #FFF;
-    font-weight: normal; }
+    font-weight: normal;
+    margin-bottom: 40px; }
   .subcategory.tapiceria {
     background-image: url(images/fondo-productos-tapiceria.jpg);
     padding-top: 120px;
@@ -518,5 +520,35 @@ a {
     background-image: url(images/fondo-productos-carpinteria.jpg); }
   .subcategory.superficie {
     background-image: url(images/fondo-productos-superficie.jpg); }
+  .subcategory .product {
+    width: 33.33%;
+    float: left;
+    text-align: center;
+    margin-bottom: 70px; }
+    .subcategory .product p {
+      color: #FFF;
+      text-transform: uppercase;
+      font-size: 18px; }
+    .subcategory .product img {
+      width: 17%;
+      margin-bottom: 10px; }
+    .subcategory .product.loveseats img {
+      width: 25%; }
+    .subcategory .product.sofas img {
+      width: 31%; }
+    .subcategory .product.salas img {
+      width: 65%; }
+    .subcategory .product.cabeceras img {
+      width: 20%; }
+    .subcategory .product.taburetes img {
+      width: 16%; }
+    .subcategory .product.libreros img {
+      width: 12%; }
+    .subcategory .product.mesas {
+      padding-top: 30px; }
+      .subcategory .product.mesas img {
+        width: 33%; }
+    .subcategory .product.recamaras img {
+      width: 35%; }
 
 /*# sourceMappingURL=style.css.map */
