Adding views for products categories

--- a/scss/layout/_nav.scss
+++ b/scss/layout/_nav.scss
@@ -39,3 +39,17 @@
 		}
 	}
 }
+
+.breadcrumb{
+	overflow:							hidden;
+	li{
+		color:							$main-color;
+		text-transform:					uppercase;
+		float: 							left;
+		margin-right:					5px;
+		a{
+			color:						$main-color;
+			margin-bottom:				10px;
+		}
+	}
+}
