--- a/scss/main.scss
+++ b/scss/main.scss
@@ -24,6 +24,7 @@
 // Pages
 @import 'pages/home';
 @import 'pages/products';
+@import 'pages/sillones';
 
 // Responsive
 @import 'layout/responsive';
