--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -77,6 +77,11 @@
 		text-transform: 				uppercase;
 		color:							$main-color;
 		font-weight: 					normal;
+		margin-bottom: 					$margin*15;
+	}
+	p{
+		color:							$main-color;
+		font-size: 						20px;
 	}
 
 }
@@ -93,6 +98,11 @@
 		text-transform: 				uppercase;
 		color:							$main-color;
 		font-weight: 					normal;
+		margin-bottom: 					$margin*15;
+	}
+	p{
+		color:							$main-color;
+		font-size: 						20px;
 	}
 }
 
