--- a/scss/layout/_nav.scss
+++ b/scss/layout/_nav.scss
@@ -28,12 +28,20 @@
 	}
 	.menu{
 		li{
+			margin-bottom:				20px;
 			a{
 				color:					$main-color;
 				text-transform: 		uppercase;
 				font-size:				16px;
 				&:hover{
 					color:				$main-color;
+				}
+			}
+			.sub-menu{
+				margin-left: 			20px;
+				margin-top:				20px;
+				li{
+					margin-bottom:		5px;
 				}
 			}
 		}
