--- a/scss/pages/_sillones.scss
+++ b/scss/pages/_sillones.scss
@@ -134,9 +134,6 @@
 		padding-left:					1%;
 		.main-img{
 			width: 						100%;
-			img{
-				width: 					50%;
-			}
 		}
 		p{
 			overflow: 					hidden;
@@ -145,7 +142,8 @@
 				height: 				150px;
 				float: 					left;
 				margin-right: 			8px;
-				border:					1px solid $sec-color;
+				margin-bottom:			10px;
+				border:					2px solid $sec-color;
 				cursor: 				pointer;
 				text-align: 			center;
 				img{
@@ -153,7 +151,7 @@
 					height: 			100%;
 				}
 				&.active{
-					border:				4px solid lighten($sec-color, 50%);
+					border:				2px solid lighten($sec-color, 35%);
 				}
 			}
 		}
