--- a/style.css
+++ b/style.css
@@ -707,8 +707,6 @@ a {
     padding-left: 1%; }
     .single-product .gallery .main-img {
       width: 100%; }
-      .single-product .gallery .main-img img {
-        width: 50%; }
     .single-product .gallery p {
       overflow: hidden; }
       .single-product .gallery p div {
@@ -716,14 +714,15 @@ a {
         height: 150px;
         float: left;
         margin-right: 8px;
-        border: 1px solid #6d6e70;
+        margin-bottom: 10px;
+        border: 2px solid #6d6e70;
         cursor: pointer;
         text-align: center; }
         .single-product .gallery p div img {
           width: auto;
           height: 100%; }
         .single-product .gallery p div.active {
-          border: 4px solid #eeeeee; }
+          border: 2px solid #c7c8c9; }
     .single-product .gallery ul {
       overflow: hidden; }
       .single-product .gallery ul li {
